<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"

    android:id="@+id/card_planta"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_view"
    cardview:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_marginTop="15sp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/card_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card_view"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimary"
            android:transitionName="@string/name_trasition"
            />
        <LinearLayout
            android:id="@+id/card_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_text_nombre_planta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="@dimen/card_text_size_user_name"
                android:textColor="@android:color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/card_like_margin_top"
                >

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/card_like"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:button="@drawable/selector_checkbox"
                    />
                <TextView
                    android:id="@+id/card_numero_me_gusta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_accountant_likes"
                    android:textColor="@android:color/white"/>
            </LinearLayout>



        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>