<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".Login.Login"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:padding="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="232dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/logo"
                    >

                </ImageView>

            </RelativeLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:fillViewport="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/hint_username" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                        android:theme="@style/edit_text_white"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:layout_marginTop="20dp"
                        android:id="@+id/login"
                        android:text="@string/txt_btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@color/colorPrimary"


                        />



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        >


                        <TextView
                            android:id="@+id/dont_have_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dont_have_account"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/text_size_dont_have_account" />

                        <TextView
                            android:id="@+id/create_here"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/dont_have_account"
                            android:contextClickable="true"
                            android:text="@string/create_here"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_dont_have_account"
                            android:textStyle="bold"


                            />


                    </RelativeLayout>

                </LinearLayout>


            </ScrollView>



        </LinearLayout>
    <ProgressBar

        android:id="@+id/progress_bar_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"

        />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
