<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.Instrucciones_identificar">
    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cómo Usar MeguaPlants:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="#000"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expliacion_como_usar"
                android:textSize="16sp"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Consejos para hacer fotos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="#000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consejos_para_fotos"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consejo_1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@drawable/imagen1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consejo_2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@drawable/imagen2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consejo_3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@drawable/imagen3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="30dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consejo_4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="#000"/>
                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@drawable/imagen5"/>
                </LinearLayout>



            </LinearLayout>





        </LinearLayout>

    </ScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/identificar_instrucciones"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:text="Identificar"
        app:cornerRadius="15dp"
        android:layout_gravity="bottom|center"
        android:textColor="#000"
        app:iconTint="#000"
        app:icon="@drawable/ic_baseline_camera_alt_24"
        android:backgroundTint="#DEF3DF"
        app:iconGravity="textStart"
        app:iconPadding="25dp"

        />



</androidx.coordinatorlayout.widget.CoordinatorLayout>